--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"next": "14.2.5",
 		"next-safe-action": "^7.4.3",
 		"next-themes": "^0.3.0",
+		"qs": "^6.12.3",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
@@ -38,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20",
+		"@types/qs": "^6.9.15",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
